# cam_acq

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  venv.sh
configs/deepstream/: deepstream_app_yolo_file_2ch.txt  deepstream_app_yolo_file_2ch_overlay.txt
configs/nvinfer/: config_infer_primary_yolo.txt
deploy/systemd/: README.md  cam-acq-acquisition.service.example  cam-acq-monitoring.service  cam-acq-run.sh  cam-acq-storage-setup.sh  cam-acq.env.example
docs/: 00_project_plan.md  01_sdk_feasibility.md  02_streaming_design.md  03_language_split.md  04_install_guide.md  05_metadata_schema.md  06_yolo_build_porting_guide.md  07_storage_capacity.md  08_ssh_healthcheck_guide.md  09_network_topology.md  10_monitoring_design.md  11_field_pending_work.md  12_debayer_3ch_strategy.md  13_gige_disconnect_recovery.md  15_3ch_resource_profiling.md  SSD_automount_guide.md  architecture.md
scripts/: debayer_mode_compare.py  ensure_pyds_wheel.sh  setup_deepstream_yolo.sh  yolo_live_dashboard.sh
sdk/Galaxy_camera/c/: ReleaseNote.txt  version.txt
sdk/Galaxy_camera/c/License/: galaxy_3rd_party_licenses.txt
sdk/Galaxy_camera/python/: version.txt
sdk/Galaxy_camera/python/api/: setup.py
sdk/Galaxy_camera/python/api/gxipy/: DeviceManager.py  Feature_s.py  ImageProc.py  __init__.py  gxidef.py  gxwrapper.py
src/cam_acq/: __init__.py  config.py  logging_setup.py
src/cam_acq/camera/: bayer.py  debayer_gst.py  device.py  frame.py  grab.py  param_store.py  params.py  ptp.py  recovery.py  timestamp.py  timesync.py
src/cam_acq/detection/: __init__.py  artifacts.py  bbox.py  events.py  gst_live.py  gst_meta.py  gst_thumb.py  nvinfer_config.py  pyds_loader.py
src/cam_acq/monitoring/: __init__.py  api.py  collector.py  host_metrics.py  live_sync.py  payloads.py  pipeline_hooks.py  server_thread.py  thumbnails.py  yolo_thumb.py
src/cam_acq/monitoring/static/: index.html
src/cam_acq/recording/: __init__.py  buffer.py  controller.py  grab.py  gst_encode.py  metadata.py  storage.py
src/cam_acq/tools/: bayer_pattern_check.py  build_yolo_engine.py  codec_profile.py  deepstream_yolo_live.py  grab_healthcheck.py  memory_profile.py  monitoring_server.py  params_client.py  ptp_test.py  record_test.py  socket_buffer_check.py  timestamp_test.py  yolo_soak_test.py
tests/: test_bayer.py  test_camera_params.py  test_config.py  test_detection.py  test_gst_thumb.py  test_host_metrics.py  test_live_sync_fps.py  test_monitoring_phase5.py  test_nvinfer_config.py  test_recording.py  test_timesync.py
